<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="no_intent_handler">
    There are no applications available to handle this action.
  </string>
    <string name="error_loading_trails">There was an error loading trails.\nTry again later</string>
    <string name="oops">Oops…</string>
    <string name="favorites">Favorites</string>
    <string name="trails">Trails</string>
    <string name="favorite">favorite</string>
    <string name="notification">notification</string>
    <string name="no_favorites">Looks like you don\'t have any favorites yet!</string>

    <plurals name="last_updated_months">
        <item quantity="one">%d month ago</item>
        <item quantity="other">%d months ago</item>
    </plurals>

    <plurals name="last_updated_days">
        <item quantity="one">%d day ago</item>
        <item quantity="other">%d days ago</item>
    </plurals>

    <plurals name="last_updated_hours">
        <item quantity="one">%d hour ago</item>
        <item quantity="other">%d hours ago</item>
    </plurals>

    <plurals name="last_updated_minutes">
        <item quantity="one">%d minute ago</item>
        <item quantity="other">%d minutes ago</item>
    </plurals>

    <string name="default_notification_channel_id">@string/notification_channel_trail_status</string>
    <string name="notification_channel_trail_status">Trail Status</string>
    <string name="notification_channel_trail_status_description">Status and riding conditions of trails that you have subscribed to</string>
    <string name="about">About</string>
    <string name="title_activity_about">AboutActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="why_are_trails_closed">Why are trails closed?</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="mountain_project">Mountain Project</string>
  <string name="website">website</string>
</resources>
