<?xml version="1.0" encoding="utf-8"?>
<merge
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout"
>

    <ImageButton
        android:id="@+id/mountain_project"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/ic_mtb_project"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/mountain_project"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
    />

    <ImageButton
        android:id="@+id/facebook"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/ic_facebook"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/facebook"
        app:layout_constraintStart_toEndOf="@id/mountain_project"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
    />

    <ImageButton
        android:id="@+id/twitter"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/ic_twitter"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/twitter"
        app:layout_constraintStart_toEndOf="@id/facebook"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
    />

    <ToggleButton
        android:id="@+id/trail_favorite"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button_favorite_background"
        android:checked="false"
        android:contentDescription="@string/favorite"
        android:stateListAnimator="@animator/toggle_button_animation"
        android:text=""
        android:textOff=""
        android:textOn=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/trail_notification"
        app:layout_constraintTop_toTopOf="parent"
    />

    <ToggleButton
        android:id="@+id/trail_notification"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button_notification_background"
        android:checked="false"
        android:contentDescription="@string/notification"
        android:stateListAnimator="@animator/toggle_button_animation"
        android:text=""
        android:textOff=""
        android:textOn=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
    />

</merge>
